--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -102,6 +102,11 @@ button{
   font-size: 16px;
 }
 
+.todo-list li.completed label {
+  text-decoration: line-through;
+  color: #999;
+}
+
 .todo-list li{
   border-bottom: 1px solid #ededed;
   font-size: 24px;
@@ -135,12 +140,6 @@ button{
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.toggle{
-  background-image: url(data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23949494%22%20stroke-width%3D%223%22/%3E%3C/svg%3E);
-    background-position: 0;
-    background-repeat: no-repeat;
 }
 
 footer{
